# test-repo

./: .cspell-dict.txt  .dockerignore  .editorconfig  .env.tool-versions  .gitattributes  .gitignore  .hadolint.yml  .markdownlint.yml  .pre-commit-config.yaml  .release-please-manifest.json  .taplo.toml  .terraformrc  .tflint.hcl  .tools.json  .trivyignore  .yamlfmt.yml  .yamllint.yml  DO_LATER.md  DO_NOW.md  Makefile  README.md  SCRATCHES.md  biome.jsonc  cspell.json  eslint.config.mjs  package.json  pnpm-lock.yaml  release-please-config.json  ruff.toml  temp.json  trivy.yaml  trivy_yaml_TODO  winodws_wsl2_setup.md
.devcontainer/common/: .bash_history.sample  .bashrc  .env.devcontainer  Dockerfile  Makefile  compose.workdir-bind-mount.yml  compose.workdir-named-volume.yml  compose.yml
.devcontainer/infra-edge/: devcontainer.json
.github/: actionlint.yml
scripts/python/: pyproject.toml
scripts/python/aws/: dotenv_to_container_def_envs_json.py
scripts/python/aws/tests/: test_dotenv_to_container_def_envs_json.py
scripts/python/aws/tests/bak/: test_dotenv_to_container_def_envs_json_py_bak
scripts/python/github_actions/: Dockerfile  e2e_test.bats  generate_strategy_matrix.py
scripts/python/github_actions/tests/: test_generate_strategy_matrix.py
scripts/python/infratest/: NOTES.md
scripts/python/infratest/tests/: infratest_tool_versions.py
scripts/python/shared/: logger.py  tools.py  utils.py
scripts/python/snippets/: fetch_latest_friendly_snippets.py  friendly_snippets.json
scripts/python/tools/: fetch_latest_tool_versions.py
src/: .env.defaults
(+258 files in other folders)
